okay, now I ACTUALLY fixed the scrollbar aesthetic

--- a/css/custom.css
+++ b/css/custom.css
@@ -48,12 +48,7 @@ h1 {
 }
 
 .blurb:hover {
-	width: 525px;
-	height: 25em;
 	overflow-y: scroll;
-	padding-right: 5%;
-	margin-left: 10%;
-	margin-top: 3%;
 }
 
 .copyright {
@@ -63,4 +58,8 @@ h1 {
 	bottom: 20px;
 	transform: translate(-50%, -50%);
 	margin: 0 auto;
+}
+
+::-webkit-scrollbar {
+    background: transparent;
 }
